--- a/hello-spring-cloud-redis/pom.xml
+++ b/hello-spring-cloud-redis/pom.xml
@@ -10,10 +10,11 @@
         <relativePath>../hello-spring-cloud-alibaba-dependencies/pom.xml</relativePath>
     </parent>
 
-    <artifactId>hello-spring-cloud-stream-shardingsphere</artifactId>
+    <artifactId>hello-spring-cloud-redis</artifactId>
     <packaging>jar</packaging>
 
-    <name>hello-spring-cloud-stream-shardingsphere</name>
+    <name>hello-spring-cloud-redis</name>
+
 
     <dependencies>
         <!-- Spring Boot Begin -->
@@ -36,35 +37,15 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <!-- Spring Cloud Begin -->
-         <dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <!-- Spring Cloud End -->
-        <!--mysql-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <!--shardingsphere start-->
-        <!-- for spring boot -->
-        <dependency>
-            <groupId>io.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-        <!-- for spring namespace -->
-        <dependency>
-            <groupId>io.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-spring-namespace</artifactId>
-            <version>3.1.0</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <!--shardingsphere end-->
+        <!-- Spring Cloud End -->
     </dependencies>
 
     <build>
@@ -73,7 +54,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>cn.mirrorming.hello.spring.cloud.redis.SpringCloudStreamApplication</mainClass>
+                    <mainClass>cn.mirrorming.hello.spring.cloud.redis.SpringCloudRedisApplication`</mainClass>
                 </configuration>
             </plugin>
         </plugins>
