--- a/hello-spring-cloud-redis/src/main/resources/application.yml
+++ b/hello-spring-cloud-redis/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   # Redis数据库索引（默认为0）
   redis:
    database: 0
-   host: localhost
+   host: 47.115.143.33
    port: 6379
    password: 123456
    timeout: 1000
