--- a/hello-spring-cloud-redis/pom.xml
+++ b/hello-spring-cloud-redis/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>redisson</artifactId>
             <version>3.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.4.2</version>
+        </dependency>
         <!-- Spring Cloud End -->
     </dependencies>
 
